[package]
name = "rust-telegram-radio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
id3 = "1.5.1"
rand = "0.8.5"
rodio = {git = "https://github.com/paffel2/rodio"}
serde = {version = "1.0.150", features = ["derive"]}
serde_json = {version = "1.0.89"}
ureq = { version = "2.5.0", features = ["json"] }
